# simple-rest-scrapper

./: README.md  pyproject.toml
