[tool.poetry]
name = "simple-rest-scrapper"
version = "0.1.0"
description = ""
authors = ["Brian Bartek <bartkowiak.brian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
fastapi = "^0.62.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
